WIP fix rendering and overflow issues - one on one

--- a/src/assets/css/cmps/mail-index.css
+++ b/src/assets/css/cmps/mail-index.css
@@ -1,6 +1,7 @@
 .mail-index {
     display: flex;
     flex-direction: column;
+    width: 100%;
     /* align-items: center;
     justify-content: center; */
     /* flex-grow: 1; */
