--- a/src/assets/css/cmps/mail-preview.css
+++ b/src/assets/css/cmps/mail-preview.css
@@ -1,14 +1,18 @@
 .mail-preview {
     display: flex;
     flex-direction: row;
-    width: 100%;
-    flex-basis: 50px;
+    width: 80%;
+    /* flex-basis: 50px; */
     border-top: 1px solid #ccc;
     padding: 10px;
     align-items: center;
     justify-content: space-between;
     transition: box-shadow 0.2s ease-in-out;
     box-sizing: border-box;
+    position: relative;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
 
 .mail-preview:hover {
@@ -87,7 +91,7 @@
     overflow: hidden;
     text-overflow: ellipsis;
     flex-shrink: 0;
-    flex-grow: 1;
+    /* flex-grow: 1; */
 }
 
 .mail-preview-read {
@@ -99,14 +103,14 @@
 }
 
 .mail-preview-body {
-    display: flex;
+    /* display: flex; */
     /* width: 600px; */
-    width: calc(100vw-(300px));
+    /* width: calc(100vw-(20400px)); */
     margin-left: 10px;
-    flex-direction: row;
-    align-items: center;
-    margin-left: auto;
-    flex-grow: 2;
+    /* flex-direction: row;
+    align-items: center; */
+    /* margin-left: auto; */
+    flex-grow: 1;
     white-space: nowrap;
     text-overflow: ellipsis;
     overflow: hidden;
